Updates to scripts, keybinds; add picom

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -23,6 +23,6 @@ hide_window_decorations yes
 
 
 # BEGIN_KITTY_THEME
-# Ayu
+# Liquid Carbon Transparent
 include current-theme.conf
 # END_KITTY_THEME
