--- a/flameshot/flameshot.ini
+++ b/flameshot/flameshot.ini
@@ -1,5 +1,8 @@
 [General]
 contrastOpacity=188
 contrastUiColor=#000c32
+drawColor=#d00e00
+fontFamily=CaskaydiaCove NF
 saveLastRegion=true
+savePath=/home/michael/Pictures/Screenshots
 uiColor=#242f71
