--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -9,7 +9,7 @@
 # Can be set per-window using rules.
 #
 # Default: false
-shadow = true;
+shadow = false;
 
 # The blur radius for shadows, in pixels.
 #
@@ -96,7 +96,7 @@ fade-out-step = 0.06;
 # `transparent-clipping`.
 #
 # Default: 0 (disabled)
-corner-radius = 0
+corner-radius = 2
 
 #################################
 #            Blur               #
@@ -114,7 +114,7 @@ blur-strength = 8
 # Can be set per-window using rules.
 #
 # Default: false
-blur-background = true
+blur-background = false
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
@@ -286,8 +286,8 @@ use-damage = true;
 # See WINDOW RULES section in the man page for how these work.
 rules: ({
   match = "window_type = 'tooltip'";
-  fade = false;
-  shadow = true;
+  fade = true;
+  shadow = false;
   opacity = 0.75;
   full-shadow = false;
 }, {
