--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -23,6 +23,6 @@ hide_window_decorations yes
 
 
 # BEGIN_KITTY_THEME
-# Liquid Carbon Transparent
+# Modus Vivendi
 include current-theme.conf
 # END_KITTY_THEME
