--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -52,7 +52,7 @@ shadow-offset-y = -7;
 # unless no-fading-openclose is used. Can be set per-window using rules.
 #
 # Default: false
-fading = true;
+fading = false;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 fade-in-step = 0.06;
@@ -285,15 +285,8 @@ use-damage = true;
 #
 # See WINDOW RULES section in the man page for how these work.
 rules: ({
-  match = "window_type = 'tooltip'";
-  fade = true;
-  shadow = false;
-  opacity = 0.75;
-  full-shadow = false;
-}, {
   match = "window_type = 'dock'    || "
-          "window_type = 'desktop' || "
-          "_GTK_FRAME_EXTENTS@";
+          "window_type = 'desktop'";
   blur-background = true;
 }, {
   match = "window_type != 'dock'";
@@ -311,10 +304,12 @@ rules: ({
   shadow = false;
 },{
   match="name='kitty'";
-  opacity=0.9
+  opacity=0.9;
+  blur-background=true;
 },{
-  match="95:class_g = 'code-oss'";
-  opacity=0.9
+  match="name*?='Visual'";
+  opacity=0.9;
+  #blur-background=true;
 })
 
 # `@include` directive can be used to include additional configuration files.
