Various config updates and improvements to installation

--- a/qtile.desktop
+++ b/qtile.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Qtile(venv)
 Comment=Qtile Session Within Venv
-Exec=/opt/qtile/entry.sh start
+Exec=/opt/qtile/entry.sh
 Type=Application
 Keywords=wm;tiling
