--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,6 @@
 enabled_layouts splits
-font_family CaskaydiaCoveNerdFont
+font_family "ProFontWindows Nerd Font"
+enable_audio_bell no
 
 # Maps
 map ctrl_shift+5 load_config_file
@@ -21,6 +22,7 @@ editor /usr/bin/vim
 background_opacity 0.7
 hide_window_decorations yes
 
+font_size 14.0
 
 # BEGIN_KITTY_THEME
 # Modus Vivendi
